# Brainstorming

./: .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
.cargo/: config
.husky/: pre-commit
.storybook/: main.ts  preview.tsx  theme.ts
apps/desktop/: .gitignore  package.json  tsconfig.json  tsconfig.node.json
apps/desktop/src/: main.tsx  renderer.d.ts  theme.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: actions.rs  main.rs  tauri_mod.rs
apps/desktop/src/components/: WindowsControlButton.tsx
apps/desktop/src/components/editor/: CoreEditor.module.css  CoreEditor.tsx  CustomType.ts  EditorCursor.module.css
apps/desktop/src/components/layout/: LayoutMain.tsx  LayoutNavbar.module.css  MainLayout.tsx  TitleBar.tsx
apps/desktop/src/pages/: EditorPage.tsx  index.ts
apps/desktop/src/styles/: global.scss
apps/matrix/src/: main.rs
apps/press/: Cargo.toml
apps/press/src/: imp.rs  main.rs
apps/quicker/: Cargo.toml  README.md
apps/quicker/src/: cli.rs  command.rs  configuration.rs  core.rs  gui.rs  main.rs
apps/rush/: Cargo.toml  README.md
apps/rush/src/: commands.rs  main.rs  rush.rs  rust.rs
apps/web/: package.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/views/: LoginPage.tsx
components/: package.json  vite.config.ts
config/eslint-config/: eslintrc.cjs  index.js  package.json
config/prettier-config/: package.json
config/tsconfig/: package.json  tsconfig.base.json
crates/brainstorming_file/src/: create_brainstorming.rs  lib.rs
crates/cerebra/: Cargo.toml
crates/cerebra/src/: cerebra_core.rs  lib.rs
crates/data-structure/: Cargo.toml
crates/data-structure/src/: element.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  modules.rs  post.rs
crates/server/src/api/: ws.rs
crates/sync_server/: Cargo.toml
desktop/: .gitignore  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs  setup_tauri.rs
desktop/src/hooks/: useSystem.ts
desktop/src/layout/: CreateRequestMenu.tsx  LayoutHeader.tsx  LayoutNavbar.tsx  MainLayout.tsx  OpenSettings.tsx  SettingsLayout.tsx  Workspace.tsx  WorkspaceTabs.tsx  index.ts
desktop/src/modules/: i18n.ts  index.ts
docs/: book.toml
docs/src/: chapter_1.md
i18n/en/: Cargo.toml  package.json  tsconfig.json
i18n/en/src/: index.ts  lib.rs
i18n/zh/: package.json
kits/DataFaker/: Makefile  README.md  main.py  pyproject.toml
kits/DataFaker/db/: connector.py  connector_test.py  table_schema.py
kits/DataFaker/faker/: core.py  core_test.py
kits/DataFaker/gui/: Window.py
kits/PressureGiver/: .gitignore  Makefile  package.json
kits/PressureGiver/src/: App.tsx  main.tsx
kits/PressureGiver/src-tauri/: Cargo.toml  tauri.conf.json
kits/PressureGiver/src-tauri/src/: main.rs  req.rs
kits/Pressurer/: package.json  pnpm-lock.yaml
kits/Pressurer/src-tauri/: Cargo.toml  tauri.conf.json
kits/aide/: Cargo.toml
kits/aide/src/: io.rs  lib.rs
kits/cookie/: Cargo.toml
kits/cookie/src/: core.rs
kits/press/: Cargo.toml
kits/press/src/: main.rs
kits/staging/: Cargo.toml
kits/trunk/: Cargo.toml
kits/yop/: Cargo.toml
libs/hotkeys/: Cargo.toml
libs/io/: Cargo.toml
libs/io/src/: io.rs  lib.rs
libs/libcookie/: Cargo.toml
libs/libgalaxy/: Cargo.toml
libs/libstaging/: Cargo.toml
libs/libtrunk/: Cargo.toml
libs/libyop/: Cargo.toml
libs/outp/: Cargo.toml
libs/outp/src/: lib.rs  println.rs
libs/request/: Cargo.toml
libs/rush/src/: main.rs
libs/tp/: Cargo.toml
libs/tp/src/: lib.rs  thread_pool.rs  thread_worker.rs  types.rs
server/: Cargo.toml
server/src/: main.rs
stories/: BrainstormingEditor.stories.tsx  Layout.stories.tsx
website/: docusaurus.config.js  package.json  sidebars.js
website/src/pages/: index.tsx
