[package]
name = "quicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
log.workspace = true
env_logger.worksapce = true
egui = "0.17.0"
eframe = "0.17.0"
tracing-subscriber= "0.3.11"
notify = "5.0.0-pre.14"
notify-rust = "4.5.8"
egui_hotkey = "0.2.0"
async-std = { version = "1", features = [ "attributes" ] }
sysinfo.workspace = true
figment.workspace = true
serde.workspace = true
