[package]
name = "quicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#io = {path='../../libs/io'}
clap.workspace = true
log.workspace = true
env_logger.worksapce = true
tokio.workspace = true
tokio-test.workspace = true
dirs.workspace = true
egui = "0.22.0"
sysinfo.workspace = true
figment.workspace = true
serde.workspace = true

